--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -12,19 +12,19 @@ jobs:
     steps:
     - name: Git checkout
       uses: actions/checkout@v4
-    
+
     - name: Docker meta
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: |
-          ghcr.io/${{ GITHUB_REPOSITORY }}
-    
+          ghcr.io/${{ github.repository }}
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
         platforms: ${{ matrix.platform }}
-    
+
     - name: Login to GHCR
       if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
@@ -32,7 +32,7 @@ jobs:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    
+
     - name: Build and push
       id: build
       uses: docker/build-push-action@v6
@@ -41,4 +41,4 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         file: ./Dockerfile
-        tags: ghcr.io/${{ GITHUB_REPOSITORY }}:${{ github.run_number }}
+        tags: ghcr.io/${{ github.repository }}:${{ github.run_number }}
