--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -18,7 +18,7 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: |
-          ghcr.io/${{ github.repository }}
+          ghcr.io/indyjonesnl/echo-hostname
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -41,5 +41,5 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         file: ./Dockerfile
-        tags: ghcr.io/${{ github.repository }}:${{ github.run_number }}
+        tags: ghcr.io/indyjonesnl/echo-hostname:${{ github.run_number }}
         target: prod
