--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -7,8 +7,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
     steps:
     - name: Git checkout
       uses: actions/checkout@v4
@@ -18,7 +16,7 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: |
-          ghcr.io/indyjonesnl/echo-hostname
+          ghcr.io/${{ github.repository }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -41,5 +39,6 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         file: ./Dockerfile
-        tags: ghcr.io/indyjonesnl/echo-hostname:${{ github.run_number }}
+        push: true
+        tags: ghcr.io/${{ github.repository }}:${{ github.run_number }}
         target: prod
