--- a/compose.yml
+++ b/compose.yml
@@ -3,23 +3,16 @@ services:
         image: app
         restart: unless-stopped
         environment:
-            DEFAULT_URI: https://${SERVER_NAME:-localhost}:${HTTPS_PORT:-443}
+            DEFAULT_URI: https://${SERVER_NAME:-localhost}:80
+            SERVER_NAME: localhost:80
         volumes:
             - caddy_data:/data
             - caddy_config:/config
         ports:
             - name: http
               target: 80
-              published: ${HTTP_PORT:-80}
+              published: 80
               protocol: tcp
-            - name: https
-              target: 443
-              published: ${HTTPS_PORT:-443}
-              protocol: tcp
-            - name: http3
-              target: 443
-              published: ${HTTP3_PORT:-443}
-              protocol: udp
 
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
